[package]
name = "Kaleidoscope"
version = "0.1.0"
authors = ["max6cn <max6cn@github>"]

[lib]
name = "lib"
path = "src/lib/lib.rs"
test = true
doc = true



[dependencies]
env_logger = "*"
log = "*"
libc = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
#llvm-sys = "80.1.1"